--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,8 +49,8 @@ p {
 
 #topBtn {
     position: fixed;
-    bottom: 30%;
-    right: 40px;
+    bottom: 50%;
+    right: 50px;
     width: 50px;
     height: 50px;
     border: 2px solid #16a6b6;
@@ -270,10 +270,98 @@ nav a.underline-menu-style:hover {
     font-size: 15px;
 }
 
+/* Social and Email */
 
+.line-left {
+    position: fixed; 
+    bottom: 0;
+    left: 40px;
+    color: #6a6a65;
+    height: 200px;
+    width: 2px;
+    background-color: #181818;
+}
 
+.footer-link {
+    color: #6a6a65;
+    font-size: 20px;
+
+}
+
+.social {
+    position: fixed;
+    bottom: 209px;
+    display: flex;
+    flex-flow: column;
+    left: 33px;
+
+}
+
+.email-right {
+    position: fixed;
+    bottom: 209px;
+    right: 29px;
+    text-orientation: mixed;
+    writing-mode: tb;
+}
+
+.email-right a {
+    color: #6a6a65;
+}
+
+.email-right a:hover {
+    color: #16a6b6;
+}
+
+.line-right {
+    position: fixed; 
+    bottom: 0;
+    right: 40px;
+    color: #6a6a65;
+    height: 200px;
+    width: 2px;
+    background-color: #181818;
+}
 
 /* Mobile version */
+
+@media screen and (max-width: 600px) {
+
+    .nameTitle {
+        font-size: 50px;
+    }
+
+    .name p {
+        font-size: 18px;
+    }
+}
+
+@media screen and (max-width: 725px) {
+    #topBtn {
+        z-index: 1;
+        right: 3%;
+    }
+
+    .social {
+        left: 20px;
+        bottom: 109px;
+    }
+
+    .email-right {
+        right: 18px;
+        bottom: 109px;
+    }
+
+    .line-left {
+        left: 28px;
+        height: 100px;
+    }
+
+    .line-right {
+        right: 28px;
+        height: 100px;
+    }
+}
 
 @media screen and (max-width: 800px) {
     .navbar-expand-sm .navbar-nav {
@@ -291,9 +379,9 @@ nav a.underline-menu-style:hover {
 
 }
 
-@media screen and (max-width: 1480px) {
+@media screen and (max-width: 1000px) {
     #contact p {
-        margin-left: 30%;
-        margin-right: 30%;
+        margin-left: 15px;
+        margin-right: 15px;
     }
 }
