--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -49,8 +49,8 @@ p {
 
 #topBtn {
     position: fixed;
-    bottom: 50%;
-    right: 50px;
+    bottom: 400px;
+    right: 20px;
     width: 50px;
     height: 50px;
     border: 2px solid #16a6b6;
@@ -334,6 +334,11 @@ nav a.underline-menu-style:hover {
     .name p {
         font-size: 18px;
     }
+
+    #contact p {
+        margin-left: 15px;
+        margin-right: 15px;
+    }
 }
 
 @media screen and (max-width: 725px) {
@@ -379,9 +384,9 @@ nav a.underline-menu-style:hover {
 
 }
 
-@media screen and (max-width: 1000px) {
+@media screen and (min-width: 600px) {
     #contact p {
-        margin-left: 15px;
-        margin-right: 15px;
+        margin-left: 24%;
+        margin-right: 24%;
     }
 }
