--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -285,7 +285,7 @@ nav a.underline-menu-style:hover {
 .footer-link {
     color: #6a6a65;
     font-size: 20px;
-    margin-bottom: 2px;
+    margin-bottom: 2px !important;
 
 }
 
