--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -41,15 +41,12 @@ p {
     color: #16a6b6  !important;
 }
 
-.border-img {
-    border: 3px solid #16a6b6;
-}
-
 /* Button scroll up style */
 
 #topBtn {
     position: fixed;
-    bottom: 450px;
+    display: none;
+    bottom: 420px;
     right: 20px;
     width: 50px;
     height: 50px;
@@ -114,21 +111,7 @@ nav a.underline-menu-style:hover {
     animation: float 6s ease-in-out infinite;
   }
   
-  @keyframes float {
-      0% {
-          box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-          transform: translatey(0px);
-      }
-      50% {
-          box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
-          transform: translatey(-20px);
-      }
-      100% {
-          box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
-          transform: translatey(0px);
-      }
-  }
-
+  
 .navbar {
     box-shadow: none;
 }
@@ -172,6 +155,12 @@ nav a.underline-menu-style:hover {
 .profile div img {
     width: 70%;
     float: right;
+}
+
+.border-img {
+    border: 3px solid #16a6b6;
+    transform: translatey(0px);
+    animation: float 6s ease-in-out infinite;
 }
 
 /* Skills section */
@@ -284,7 +273,7 @@ nav a.underline-menu-style:hover {
 
 .footer-link {
     color: #6a6a65;
-    font-size: 20px;
+    font-size: 21px;
     margin-bottom: 10px;
 }
 
@@ -303,6 +292,7 @@ nav a.underline-menu-style:hover {
     right: 29px;
     text-orientation: mixed;
     writing-mode: tb;
+    font-size: 17px;
 }
 
 .email-right a {
@@ -390,3 +380,19 @@ nav a.underline-menu-style:hover {
         margin-right: 24%;
     }
 }
+
+@keyframes float {
+    0% {
+        box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+        transform: translatey(0px);
+    }
+    50% {
+        box-shadow: 0 25px 15px 0px rgba(0,0,0,0.2);
+        transform: translatey(-20px);
+    }
+    100% {
+        box-shadow: 0 5px 15px 0px rgba(0,0,0,0.6);
+        transform: translatey(0px);
+    }
+}
+
