--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -6,6 +6,7 @@ body {
     font-family: 'Abel', sans-serif;
 }
 
+
 .border-style {
     margin: 20px;
     background-color: #f5f5f5;
@@ -223,6 +224,11 @@ nav a.underline-menu-style:hover {
     color: #6a6a65;
     font-family: 'Abel', sans-serif !important;
     font-size: 18px !important;
+}
+
+.card-footer {
+    background-color: #fff !important;
+    border: none !important;
 }
 
 /* Footer section */
